--- a/#src/index.html
+++ b/#src/index.html
@@ -11,14 +11,14 @@
 <body>
 	<!-- @@include('html/components/_preloader.html') -->
 	@@include('html/components/_header.html')
-	<div class="parallax-wrapper">
+	<div class="wrapper">
 		@@include('html/pages/index/_main.html')
 		@@include('html/pages/index/_about.html')
 		@@include('html/pages/index/_services.html')
 		@@include('html/pages/index/_fusion.html')
 		@@include('html/pages/index/_feedback.html')
+		@@include('html/components/_footer.html')
 	</div>
-	@@include('html/components/_footer.html')
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/ScrollTrigger.min.js"></script>
